the type of stored numbers has been changed from int to float: now the result can be a number with a fractional part

--- a/Assignment2b/Makefile
+++ b/Assignment2b/Makefile
@@ -6,7 +6,7 @@ total: main.o ReversePolishNotation.o
 main.o: main.cpp
 	g++ -c main.cpp
 
-sayhello.o: ReversePolishNotation.cpp
+ReversePolishNotation.o: ReversePolishNotation.cpp
 	g++ -c ReversePolishNotation.cpp
 
 clean:
