fixed the error in the code, made tests. The tests are checked, the code works properly

--- a/Assignment3/Makefile
+++ b/Assignment3/Makefile
@@ -25,7 +25,7 @@ TEST-OBJ = TransformerTest.o
 
 .PHONY: default
 
-default: all
+default: all cleanall
 
 # Rule to compile .cpp files to .o files
 %.o: %.cpp $(DEPS)
