Fix GitHub Actions workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,9 +2,9 @@ name: Deploy Doxygen Documentation
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develope ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develope ]
 
 jobs:
   build-and-deploy:
@@ -24,7 +24,7 @@ jobs:
         
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develope'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./lab2/docs/html
