Update GitHub Actions workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,39 +1,50 @@
-name: Deploy Doxygen Documentation
+name: Deploy Documentation to GitHub Pages
 
 on:
   push:
     branches: [ main, develope ]
-  pull_request:
-    branches: [ main, develope ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
-      
-    - name: Install Doxygen
+
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y doxygen graphviz
-        
-    - name: Generate Documentation
+        sudo apt-get install -y g++ make doxygen graphviz
+
+    - name: Generate documentation
       run: |
         echo "Current directory: $(pwd)"
-        echo "Checking if Doxyfile exists in root:"
+        echo "Checking if Doxyfile exists:"
         ls -la Doxyfile
-        echo "Contents of lab2 directory:"
-        ls -la lab2/
         echo "Doxygen version:"
         doxygen --version
         doxygen Doxyfile
-        
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develope'
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/html
-        destination_dir: docs
+        path: docs/html
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
