--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -37,13 +37,26 @@ jobs:
         doxygen --version
         doxygen Doxyfile
 
+    - name: Prepare deployment
+      run: |
+        # Create a deployment directory
+        mkdir -p deployment
+        # Copy main index.html to root
+        cp index.html deployment/
+        # Copy documentation to docs subdirectory
+        cp -r docs/html deployment/docs
+        # Copy .nojekyll file
+        cp .nojekyll deployment/ 2>/dev/null || echo "No .nojekyll file found"
+        echo "Deployment structure:"
+        ls -la deployment/
+
     - name: Setup Pages
       uses: actions/configure-pages@v4
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: docs/html
+        path: deployment
 
     - name: Deploy to GitHub Pages
       id: deployment
